# richat-backend

./: Cargo.toml  README.md
migrations/: 20230204195831_initial-tables.sql
src/: lib.rs  main.rs
src/routes/: index.rs  mod.rs  posts.rs
