[package]
name = "richat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = "0.6.4"
tokio = { version = "1.24.2", features = ["full"] }
