[package]
name = "richat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = "0.6.4"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "time" ] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
